--- a/src/main/resources/templates/vacantes/listVacantes.html
+++ b/src/main/resources/templates/vacantes/listVacantes.html
@@ -61,7 +61,7 @@
                   
                
                   <td>
-                    <a  th:href="@{/vacantes/crear(id=${vacante.id})}"class="btn btnsuccess btn-sm" role="button" title="Editar el registro."><i class="fas fa-pencil-alt" aria-hidden="true"></i></a>
+                    <a  th:href="@{/vacantes/crear(id=${vacante.id})}"class="btn btn-success btn-sm" role="button" title="Editar el registro."><i class="fas fa-pencil-alt" aria-hidden="true"></i></a>
                     <a th:href="@{/vacantes/eliminar(id=${vacante.id})}" onclick="return confirm('¿Estas seguro?')" class="btn btn-danger btn-sm" role="button" title="Eliminar el registro."><i class="fas fa-trash" aria-hidden="true"></i></a>
                   <a th:href="@{/vacantes/detalle(id=${vacante.id})}"  class="btn btn-success btn-sm" role="button" title="Consultar Registro"><i class="fas fa-newspaper" aria-hidden="true"></i></a>
                   </td>
