--- a/src/main/resources/templates/usuarios/listUsuarios.html
+++ b/src/main/resources/templates/usuarios/listUsuarios.html
@@ -48,13 +48,12 @@
                   
                   <td>
                     <a th:href="@{/usuarios/delete/{id} (id=${usuario.id}) }" onclick="return confirm('¿Estas seguro?')" class="btn btn-success btn-sm" role="button" title="Eliminar"><i class="fas fa-trash" aria-hidden="true"></i></a>
-                    
-                    |
+                   
                     
                     <span th:switch="${usuario.estatus}"> 
                     
-                      <a th:case="'1'" th:href="@{/usuarios/lock/{id} (id=${usuario.id}) }" onclick="return confirm('¿Quiere bloquear el acceso al usuario?')" class="btn btn-info btn-sm" role="button" title="Bloquear el acceso al sistema para este usuario."><i class="fas fa-lock" aria-hidden="true"></i></a>	
-					  <a th:case="'0'" th:href="@{/usuarios/unlock/{id} (id=${usuario.id}) }" onclick="return confirm('¿Desea desbloquear el usuario?')" class="btn btn-outline-info btn-sm" role="button" title="Permitir el acceso al sistema a este usuario."><i class="fas fa-unlock" aria-hidden="true"></i></a>
+                      <a th:case="'1'" th:href="@{/usuarios/lock/{id} (id=${usuario.id}) }" onclick="return confirm('¿Quiere bloquear el acceso al usuario?')" class="btn btn-danger btn-sm" role="button" title="Bloquear el acceso al sistema para este usuario."><i class="fas fa-lock" aria-hidden="true"></i></a>	
+					  <a th:case="'0'" th:href="@{/usuarios/unlock/{id} (id=${usuario.id}) }" onclick="return confirm('¿Desea desbloquear el usuario?')" class="btn btn-success btn-sm" role="button" title="Permitir el acceso al sistema a este usuario."><i class="fas fa-unlock" aria-hidden="true"></i></a>
 					   
 					</span>
                     
