--- a/src/main/resources/templates/Categorias/listCategorias.html
+++ b/src/main/resources/templates/Categorias/listCategorias.html
@@ -52,7 +52,7 @@
              
               
                   <td>
-                    <a  class="btn btn-warning btn-sm" th:href="@{/categorias/buscar(id=${categoria.id})}"  role="button" title="Editar"><i class="fas fa-pencil-alt" aria-hidden="true"></i></a>
+                    <a  class="btn btn-success btn-sm" th:href="@{/categorias/buscar(id=${categoria.id})}"  role="button" title="Editar"><i class="fas fa-pencil-alt" aria-hidden="true"></i></a>
                     <a th:href="@{/categorias/eliminar(id=${categoria.id})}" onclick="return confirm('¿Estas seguro?')" class="btn btn-danger btn-sm"  role="button" title="Eliminar"><i class="fas fa-trash" aria-hidden="true"></i></a>
                   </td>
                 </tr>
